further fix of white space issue in header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@ hr {
 }
 
 .header {
+    height: 0vh;
     width: 100%;
     position: relative; 
 }
